2002-03-03  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amadmin.c (disklist_one): Print dp->device.
	* server-src/amcheck.c (start_host): Send device if specified.
	* server-src/amstatus.pl.in: Parse line with device.
	* server-src/diskfile.c (parse_diskline): Parse device.
	* server-src/diskfile.c (match_disklist): Match on device.
	* server-src/diskfile.h (disk_t): New field device.
	* server-src/driverio.c: (dumper_cmd): Send device.
	* server-src/dumper.c (main): Parse device in request.
	* server-src/dumper.c (start_dump): New device argument, send
	  device to client.
	* server-src/planner.c (getsize): Send device to client.
	* server-src/server_util.h (MAX_ARGS): Set it to 12.
	* client-src/client_util.c (add_include, build_exclude, build_include,
	  parse_options): New device argument.
	* client-src/client_util.h (build_exclude,build_include,parse_options):
	  New prototype.
	* client-src/selfcheck.c: Use device.
	* client-src/sendbackup-dump.c: Use device.
	* client-src/sendbackup-gnutar.c: Use device.
	* client-src/sendbackup.c: Use device.
	* client-src/sendbackup.h (start_backup): New device argument.

2002-03-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

        * server-src/amstatus.pl.in: Write "wait to flush" only if waittaper
	  is requested.

2002-03-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amstatus.pl.in: Fix for failed tape.

2002-02-18  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* man/amanda.8.in: Document multiple exclude.
	* man/amanda.8.in: Document include.

2002-02-16  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client-util.c (add_include): Include are glob expression.

2002-02-16  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/debug.c (debug_open); Don't try to renmae an already 
	  renamed file.

2002-02-15  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/conffile.c (dump_configuration): Print multiple 