@@ -1,3 +1,7 @@
+2002-03-05  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
+
+	* server-src/amstatus.pl.in: Fix.
+
 2002-03-03  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
 	* server-src/amadmin.c (disklist_one): Print dp->device.
@@ -21,6 +25,9 @@
 	* client-src/sendbackup-gnutar.c: Use device.
 	* client-src/sendbackup.c: Use device.
 	* client-src/sendbackup.h (start_backup): New device argument.
+	* client-src/sendsize.c: Use device.
+	* man/amanda.8.in: Document new disklist syntax.
+	* example/disklist: Give example.
 
 2002-03-02  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
 
